# competitive-programming

./: .editorconfig
codewars/src/Computer problem series #1: Fill the Hard Disk Drive/: Solution.cpp
codewars/src/Even or Odd/: solution.rs
codewars/src/Find numbers which are divisible by given number/: solution.ts
codewars/src/Find the first non-consecutive number/: Solution.java
codewars/src/Multiples of 3 or 5/: solution.rs
codewars/src/Stop gninnipS My sdroW!/: Solution.php
codewars/src/get ascii value of character/: solution.c
dsa/ccsp/: CMakeLists.txt
dsa/ccsp/include/: bit_length.h  fibonacci.h
dsa/ccsp/source/: bit_length.cpp  fibonacci.cpp
